--- a/_includes/about.html
+++ b/_includes/about.html
@@ -88,7 +88,9 @@
     </div>
     <div class="tech">
       <h2>Publication</h2>
-      <p>A Team Based Player Versus Player Recommender Systems Framework For Player Improvement, in: NSW, Australia, ACSW, 2019 </p>
+      <p>A Team Based Player Versus Player Recommender </p>
+      <p>Systems Framework For Player Improvement </p>
+      <p>in: NSW, Australia, ACSW, 2019 </p>
     </div>
       
 </div>
