--- a/_includes/about.html
+++ b/_includes/about.html
@@ -91,7 +91,7 @@
       <p>A Team Based Player Versus Player Recommender </p>
       <p>Systems Framework For Player Improvement </p>
       <p>in: NSW, Australia, ACSW, 2019 </p>
-      <a href="https://vincent9514.github.io/Type-on-Strap/2018/03/26/Yelp.html" style="font-size: 20px">Check it out</a>
+      <a href="https://www.scholars.northwestern.edu/en/publications/a-team-based-player-versus-player-recommender-systems-framework-f" style="font-size: 20px">Check it out</a>
     </div>
       
 </div>
