--- a/_includes/about.html
+++ b/_includes/about.html
@@ -93,5 +93,29 @@
       <p>in: NSW, Australia, ACSW, 2019 </p>
       <a href="https://www.scholars.northwestern.edu/en/publications/a-team-based-player-versus-player-recommender-systems-framework-f" style="font-size: 20px">Check it out</a>
     </div>
-      
+</div>
+
+ <div class="user-details">
+  <h1> Education </h1>
+</div>
+
+<div class="user">
+   
+  <div class="tech">
+  <img alt="mountains" src="{{ "/assets/img/AAHK_logo.png" | prepend: site.baseurl }}" height="200" width="200"/>
+  <h4 class>BEng in Industrial and Systems Engineering, The Hong Kong Polytechnic University</h4>
+  <p class>HK Government Excellent Student Scholarship, 4 years Dean's list, 3.78 GPA, 2013-2017</p>
+  </div>
+    
+  <div class="tech">
+  <img alt="mountains" src="{{ "/assets/img/audi_logo.png" | prepend: site.baseurl }}" height="200" width="200"/>
+  <h4 class>International Student Exchange Program, University of Pittsburgh </h4>
+  <p class>3.90 GPA, 2015-2016 </p>
+  </div>
+    
+  <div class="tech">
+  <img alt="mountains" src="{{ "/assets/img/bp_logo.png" | prepend: site.baseurl }}" height="200" width="200"/>
+  <h4 class>Master of Science in Analytics, Northwestern University </h4>
+  <p class>3.86 GPA, 2017-2018</p>
+  </div>
 </div>
