--- a/_includes/about.html
+++ b/_includes/about.html
@@ -102,19 +102,19 @@
 <div class="user">
    
   <div class="tech">
-  <img alt="mountains" src="{{ "/assets/img/AAHK_logo.png" | prepend: site.baseurl }}" height="200" width="200"/>
+  <img alt="mountains" src="{{ "/assets/img/PolyU.png" | prepend: site.baseurl }}" height="180" width="180"/>
   <h4 class>BEng in Industrial and Systems Engineering, The Hong Kong Polytechnic University</h4>
   <p class>HK Government Excellent Student Scholarship, 4 years Dean's list, 3.78 GPA, 2013-2017</p>
   </div>
     
   <div class="tech">
-  <img alt="mountains" src="{{ "/assets/img/audi_logo.png" | prepend: site.baseurl }}" height="200" width="200"/>
+  <img alt="mountains" src="{{ "/assets/img/Pitt.jpeg" | prepend: site.baseurl }}" height="180" width="180"/>
   <h4 class>International Student Exchange Program, University of Pittsburgh </h4>
   <p class>3.90 GPA, 2015-2016 </p>
   </div>
     
   <div class="tech">
-  <img alt="mountains" src="{{ "/assets/img/bp_logo.png" | prepend: site.baseurl }}" height="200" width="200"/>
+  <img alt="mountains" src="{{ "/assets/img/NU.png" | prepend: site.baseurl }}" height="180" width="180"/>
   <h4 class>Master of Science in Analytics, Northwestern University </h4>
   <p class>3.86 GPA, 2017-2018</p>
   </div>
