--- a/_includes/about.html
+++ b/_includes/about.html
@@ -104,7 +104,7 @@
   <div class="tech">
   <img alt="mountains" src="{{ "/assets/img/PolyU.png" | prepend: site.baseurl }}" height="150" width="150"/>
   <h4 class>BEng in Industrial and Systems Engineering, The Hong Kong Polytechnic University</h4>
-  <p class>HK Government Excellent Student Scholarship, 4 years Dean's list, 3.78 GPA, 2013-2017</p>
+  <p class>3.78 GPA, 2013-2017</p>
   </div>
     
   <div class="tech">
