--- a/_includes/about.html
+++ b/_includes/about.html
@@ -103,8 +103,8 @@
    
   <div class="tech">
   <img alt="mountains" src="{{ "/assets/img/PolyU.png" | prepend: site.baseurl }}" height="150" width="150"/>
-  <h4 class>BEng in Industrial and Systems Engineering, The Hong Kong Polytechnic University</h4>
-  <p class>3.78 GPA, 2013-2017</p>
+  <h4 class>BEng in Industrial Engineering, The Hong Kong Polytechnic University</h4>
+  <p class>3.78 GPA, 2013-2017 </p>
   </div>
     
   <div class="tech">
