--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -3,6 +3,20 @@
 </div>
 
 <div class="user-projects">
+  <div class="images-left">
+    <img alt="mountains" src="{{ "/assets/img/COVID.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents-right">
+    <h3> State Department of Labor </h3>
+    <ul>
+      <li> Unemployment Analytics</li>
+    </ul>
+    <p>Built data pipeline to automate ETL process of unemployment claims data from Salesforce using Python, SOQL, and Apex. </p>
+    <p>Curated unemployment data with COVID-19 and economic data to extract insights and operationalize it for business processes. </p>
+  </div>
+</div>
+
+<div class="user-projects">
   <div class="images-right">
     <img alt="mountains" src="{{ "/assets/img/chatbot.jpg" | prepend: site.baseurl }}" />
   </div>
