add two projects

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -4,6 +4,33 @@
 
 <div class="user-projects">
   <div class="images-left">
+    <img alt="mountains" src="{{ "/assets/img/JPMC.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents-right">
+    <h3> Multinational Investment Bank </h3>
+    <ul>
+      <li> NLP & Document Digitization Pipeline </li>
+    </ul>
+    <p>Launched end-to-end document digitization pipelines, which automate data extraction from PDF documents to digital insights using OCR, text classification & annotation, and Kafka, which reduced costs of routine data collection task by 90%. </p>
+  </div>
+</div>
+
+<div class="user-projects">
+  <div class="images-right">
+    <img alt="mountains" src="{{ "/assets/img/PG.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents">
+    <h3> Global Consumer Goods Company </h3>
+    <ul>
+      <li> Customer Marketing Analytics</li>
+    </ul>
+    <p>Launched a proof-of-concept insight platform for Men's grooming brands, wining $500K+ contract for implementation. </p>
+    <p>Demonstrated 20% increase of product revenue by applying GMM to segment customer clusters and classification models to identify loyal customers given their psychometry, demography review sentiments, and geography data. </p>
+  </div>
+</div>
+
+<div class="user-projects">
+  <div class="images-left">
     <img alt="mountains" src="{{ "/assets/img/COVID.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
